--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <script>
     // Replace with your published Google Sheets CSV URL
-    const sheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vT4EVsy5DvH079ExNqMKimEr_sZujqk6sY8_82x0Z7JVv_P7yrcMPxL1naU1WZybsfRHjUBJyQbiw3y/pub?output=csv";
+    const sheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vT4EVsy5DvH079ExNqMKimEr_sZujqk6sY8_82x0Z7JVv_P7yrcMPxL1naU1WZybsfRHjUBJyQbiw3y/pub?gid=1319885110&single=true&output=csv";
 
     // Fetch and display jobs
     fetch(sheetUrl)
