--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MicroJobs.io | $1 Job Board (All Roles)</title>
+    <title>ZeroFluff Jobs | $1 Job Board (All Roles)</title>
     <style>
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
@@ -268,15 +268,15 @@
 </head>
 <body>
     <header>
-        <h1 class="neon-text">MicroJobs.io</h1>
+        <h1 class="neon-text">ZeroFluff Jobs</h1>
         <div class="subtitle">$1 job board · Full-time, freelance, and contract roles</div>
     </header>
 
     <div class="filters">
         <div class="filter-group">
-            <label for="category-filter">Category</label>
+            <label for="category-filter">Industries</label>
             <select id="category-filter">
-                <option value="all">All Categories</option>
+                <option value="all">All Industries</option>
             </select>
         </div>
         <div class="filter-group">
