--- a/index.html
+++ b/index.html
@@ -383,6 +383,25 @@
         }
     }
 
+    function getDaysSincePosted(dateStr) {
+        try {
+            const postedDate = new Date(dateStr);
+            if (isNaN(postedDate.getTime())) return "recently";
+            
+            const currentDate = new Date();
+            const diffTime = currentDate - postedDate;
+            const diffDays = Math.floor(diffTime / (1000 * 60 * 60 * 24));
+            
+            if (diffDays === 0) return "today";
+            if (diffDays === 1) return "1 day ago";
+            if (diffDays < 7) return `${diffDays} days ago`;
+            if (diffDays < 30) return `${Math.floor(diffDays/7)} weeks ago`;
+            return `${Math.floor(diffDays/30)} months ago`;
+        } catch {
+            return "recently";
+        }
+    }
+
     function loadJobs() {
         fetch(sheetUrl)
             .then(response => response.text())
@@ -429,7 +448,7 @@
                                     ${salary ? `<span class="job-salary">${salary}</span>` : ''}
                                 </div>
                                 <div class="job-meta">
-                                    <span>Posted ${formatDate(date)} · ${category}</span>
+                                    <span>Posted ${getDaysSincePosted(date)} · ${category}</span>
                                     <a href="${cleanApplyLink}" target="_blank" rel="noopener" title="${cleanApplyLink}" class="job-apply">
                                         Apply (${extractDomain(cleanApplyLink)})
                                     </a>
