--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-            max-width: 100%;
+            max-width: 600px;
             margin: 0 auto;
             padding: 20px;
             background: #0f0f15;
